Astro/astro-tests/testData/service/completion/await.astro
---
<error descr="Astro: Cannot find name 'a'.">a<caret></error>
---